# vv_wav2slide_wav.py

./: .gitignore  Makefile  README.ja.md  README.md  pyproject.toml  vv_wav2slide_wav.py  vv_wav2slide_wav.sh.tmpl
src/vv_wav2slide_wav/: __init__.py
src/vv_wav2slide_wav/config/: vv-wav2slide-wav.toml
tests/spike/: test_tomllib.py
