[tool.poetry]
name = "20_vv_wav2slide_wav"
version = "0.1.0"
description = "VOICEVOXで生成した音声ファイルを、スライド資料用にスライド単位にグループ化した音声ファイルに変換します。"
authors = ["kanta <101532773+kantas-spike@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
