[project]
name = "vv-wav2slide-wav"
version = "0.1.0"
description = "OICEVOXで生成した音声ファイルを、スライド資料用にスライド単位にグループ化した音声ファイルに変換します。"
readme = "README.md"
authors = [
    { name = "kanta", email = "101532773+kantas-spike@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydub>=0.25.1",
]

[project.scripts]
vv-wav2slide-wav = "vv_wav2slide_wav:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
